--- a/contact_de.html
+++ b/contact_de.html
@@ -2,14 +2,14 @@
 <html lang="de">
 <head>
     <meta charset="utf-8"/>
-    <title>Kontakt – LINYER (Deutsch)</title>
+    <title>LINYER INFO de.</title>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link rel="stylesheet" href="index.css">
 </head>
 <body class="index-page">
     <div class="linyer-tab">
         <div class="linyer-tab-section linyer-tab-left">
-            <a href="contact_de.html" class="linyer-tab-link">INFO</a>
+            <a href="work_de.html" class="linyer-tab-link">PROJEKTE</a>
             <div>
                 <a href="contact_de.html" class="linyer-tab-link active-lang">de.</a>
                 <a href="contact_sv.html" class="linyer-tab-link">sv.</a>
@@ -19,33 +19,35 @@
             <a href="index.html" class="linyer-tab-link">LINYER</a>
         </div>
         <div class="linyer-tab-section linyer-tab-right">
-            <a href="https://www.instagram.com/a_linyer/" target="_blank" class="linyer-tab-link">INSTAGRAM</a>
+            <a href="contact_de.html" target="_blank" class="linyer-tab-link active-lang">INFO</a>
             <div>contact@linyer.info</div>
         </div>
     </div>
     <div class="contact-content">
-        <img src="img/CONTACT_03.png" alt="LINYER Bild" style="max-width: 800px; width: 100%; height: auto; margin: 20px auto; display: block;" /><br/>
-        <br/>
-        ÜBER<br/>
+    <img src="img/CONTACT_03.png" alt="LINYER Bild" style="max-width: 800px; width: 100%; height: auto; margin: 20px auto; display: block;" /><br/>
+    <br/>
+    <span style="font-family: 'TXT', Arial, Helvetica, sans-serif;">INFO</span>
         LINYER ist ein Architekturbüro mit Sitz in Stockholm und Zürich, gegründet und betrieben von Lowis Gujer und Emma Lindén seit 2024. Obwohl ihr Hauptfokus auf lokalen und kleinen Projekten liegt, umfasst ihr Interesse eine breite Palette von Themen wie architektonische Entwürfe für öffentliche Gebäude und Bildungseinrichtungen, konstruktive Detaillösungen im Maßstab 1:1, Visualisierung von Ideen durch Illustrationen und Modelle, Stadtplanung und Schreiben. In ihrem Ansatz suchen sie stets den Dialog mit allen Beteiligten, da jeder Gedanke zur Entwicklung einer Idee beitragen kann. Neben ihrem Engagement für LINYER sind beide auch in anderen Projekten aktiv. Lowis ist als wissenschaftlicher Assistent am Lehrstuhl für Architectural Behaviorology bei Prof. Momoyo Kaijima am Institut für Design und Architektur D-ARCH ETHZ tätig. Emma arbeitet als Projektleiterin für SAKKE Studio in den frühen Projektphasen.<br/>
         <br/>
         Emma Lindén (geb. 1994, Stockholm SE) ist Architektin MAS/SAR. Während ihres Studiums an der Königlichen Technischen Hochschule Stockholm absolvierte sie ein Austauschjahr an der ETHZ. Sie arbeitete für General Architecture, Lütjens Padmanabhan, Maich Swift und Boltshauser Architekten, bevor sie zu SAKKE Studio wechselte.<br/>
         <br/>
         Lowis Gujer (geb. 1995, Zürich CH) ist Architekt MSc Arch. ETHZ. Er schloss sein Studium an der ETHZ mit einer Diplomarbeit zum Thema „Eine Stadt ohne Schlachthof?“ unter der Leitung von Prof. Momoyo Kaijima ab. Nach Erfahrungen in Architekturbüros in Zürich, Stockholm und London arbeitet er seit Anfang 2024 am Lehrstuhl für Architectural Behaviorology. Dort ist er als wissenschaftlicher Assistent für den Entwurfskurs im zweiten Jahr, den Masterkurs "Japan Studio" und weitere Lehrprojekte tätig.<br/>
         <br/>
-        KONTAKT<br/>
+    <span style="font-family: 'TXT', Arial, Helvetica, sans-serif;">KONTAKT</span>
         contact@linyer.info<br/>
         4. OG Neue Hard 12<br/>
         CH-8004 Zürich<br/>
         <br/>
-        LINKS<br/>
+    <span style="font-family: 'TXT', Arial, Helvetica, sans-serif;">LINKS</span>
         <a href="https://www.sakke.ch">- Sakke Studio</a>
         <a href="https://www.kaijima.arch.ethz.ch">- Lehrstuhl für Architectural Behaviorology, Prof. Momoyo Kaijima, D-ARCH, ETHZ</a>
         <a href="https://www.hochparterre.ch/nachrichten/planung-staedtebau/die-saeulenhalle-endlich-ein-zentrum-fuer-zuerich-west">- Die Säulenhalle: Endlich ein Zentrum für Zürich West!</a>
         <a href="https://www.hochparterre.ch/campus/eine-stadt-ohne-schlachthof">- Eine Stadt ohne Schlachthof?</a>
+        <a href="https://trans.ethz.ch/issue/time">- trans magazin #42 TIME</a>
+        <a href="https://trans.ethz.ch/issue/fire-1">- trans magazin #41 FIRE</a>
         <br/>
-        PARTNER<br/>
-        Dalla Santa Birkeland Arkitekter, Nando von Arb, Lauro Nächt, Beatrice Kiser, Lars Ruge, Hochparterre, IGHZH, Stiftung Hamasil
+    <span style="font-family: 'TXT', Arial, Helvetica, sans-serif;">ZUSAMMENARBEIT</span>
+        Dalla Santa Birkeland Arkitekter, Nando von Arb, Lauro Nächt, Beatrice Kiser, Lars Ruge, Hochparterre, IGHZH, Stiftung Hamasil, trans magazin, 
     </div>
 </body>
 </html>
