--- a/contact_sv.html
+++ b/contact_sv.html
@@ -2,14 +2,14 @@
 <html lang="sv">
 <head>
     <meta charset="utf-8"/>
-    <title>Kontakt – LINYER (Svenska)</title>
+    <title>LINYER INFO sv.</title>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link rel="stylesheet" href="index.css">
 </head>
 <body class="index-page">
     <div class="linyer-tab">
         <div class="linyer-tab-section linyer-tab-left">
-            <a href="contact_sv.html" class="linyer-tab-link">INFO</a>
+            <a href="work_sv.html" class="linyer-tab-link">PROJEKT</a>
             <div>
                 <a href="contact_de.html" class="linyer-tab-link">de.</a>
                 <a href="contact_sv.html" class="linyer-tab-link active-lang">sv.</a>
@@ -19,14 +19,14 @@
             <a href="index.html" class="linyer-tab-link">LINYER</a>
         </div>
         <div class="linyer-tab-section linyer-tab-right">
-            <a href="https://www.instagram.com/a_linyer/" target="_blank" class="linyer-tab-link">INSTAGRAM</a>
+            <a href="contact_sv.html" target="_blank" class="linyer-tab-link active-lang">INFO</a>
             <div>contact@linyer.info</div>
         </div>
     </div>
     <div class="contact-content">
         <img src="img/CONTACT_03.png" alt="LINYER Bild" style="max-width: 800px; width: 100%; height: auto; margin: 20px auto; display: block;" /><br/>
         <br/>
-        OM<br/>
+        <span style="font-family: 'TXT', Arial, Helvetica, sans-serif;">INFO</span>
         LINYER är ett arkitektkontor baserat i Stockholm och Zürich, grundat och drivet av Lowis Gujer och Emma Lindén sedan 2024. Även om deras huvudsakliga expertis ligger i det lokala och småskaliga sträcker sig deras intresse över ett brett spektrum av ämnen såsom arkitektonisk design för offentliga byggnader och utbildningslokaler, konstruktiva detaljlösningar i 1:1, visualisering av idéer genom illustrationer och modeller, stadsplanering och skrivande. I sitt arbetssätt strävar de alltid efter att kommunicera med och förstå alla inblandade, då varje perspektiv kan berika utvecklingen av en idé. Förutom sitt engagemang för LINYER är båda involverade i andra projekt. Lowis är anställd som undervisningsassistent vid Chair of Architectural Behaviorology med Prof. Momoyo Kaijima på institutionen för design och arkitektur D-ARCH ETHZ. Emma arbetar som projektledande arkitekt för Sakke Studio i de tidiga projektskeden.<br/>
         <br/>
         Emma Lindén (f. 1994, Stockholm SE) är arkitekt MAS/SAR. Under sina studier vid Kungliga Tekniska Högskolan i Stockholm gjorde hon ett utbytesår vid ETHZ. Hon har arbetat för General Architecture, Lütjens Padmanabhan, Maich Swift och Boltshauser Architekten innan hon började på SAKKE Studio.<br/>
@@ -38,13 +38,15 @@
         4. vån Neue Hard 12<br/>
         CH-8004 Zürich<br/>
         <br/>
-        LÄNKAR<br/>
+        <span style="font-family: 'TXT', Arial, Helvetica, sans-serif;">LÄNKAR</span>
         <a href="https://www.sakke.ch">- Sakke Studio</a>
         <a href="https://www.kaijima.arch.ethz.ch">- Chair of Architectural Behaviorology, Prof. Momoyo Kaijima, D-ARCH, ETHZ</a>
         <a href="https://www.hochparterre.ch/nachrichten/planung-staedtebau/die-saeulenhalle-endlich-ein-zentrum-fuer-zuerich-west">- Die Säulenhalle: Äntligen ett centrum för Zürich West!</a>
         <a href="https://www.hochparterre.ch/campus/eine-stadt-ohne-schlachthof">- Eine Stadt ohne Schlachthof?</a>
+        <a href="https://trans.ethz.ch/issue/time">- trans magazin #42 TIME</a>
+        <a href="https://trans.ethz.ch/issue/fire-1">- trans magazin #41 FIRE</a>
         <br/>
-        SAMARBETSPARTNERS<br/>
+        <span style="font-family: 'TXT', Arial, Helvetica, sans-serif;">SAMARBETSPARTNERS</span>
         Dalla Santa Birkeland Arkitekter, Nando von Arb, Lauro Nächt, Beatrice Kiser, Lars Ruge, Hochparterre, IGHZH, Stiftung Hamasil
     </div>
 </body>
