--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LINYER Landing</title>
+    <title>LINYER ARCHITECTURE</title>
     <link rel="preload" href="txt.ttf" as="font" type="font/ttf" crossorigin>
     <style>
         @font-face {
@@ -64,33 +64,32 @@
             "img/INDEX_01.jpg",
             "img/INDEX_02.jpg",
             "img/INDEX_03.jpg",
-            "img/INDEX_04.jpg",
-            "img/INDEX_05.jpg",
-            "img/INDEX_06.jpg",
-            "img/INDEX_07.jpg",
-            "img/INDEX_08.jpg",
-            "img/INDEX_09.jpg",
-            "img/INDEX_10.jpg",
-            "img/INDEX_11.jpg",
-            "img/INDEX_12.jpg",
-            "img/INDEX_13.jpg",
-            "img/INDEX_14.jpg",
-            "img/INDEX_15.jpg",
-            "img/INDEX_16.jpg",
-            "img/INDEX_17.jpg",
-            "img/INDEX_18.jpg",
-            "img/INDEX_19.jpg",
-            "img/INDEX_20.jpg",
-            "img/INDEX_21.jpg",
-            "img/INDEX_22.jpg",
-            "img/INDEX_23.jpg",
-            "img/INDEX_24.jpg",
-            "img/INDEX_25.jpg",
-            "img/INDEX_26.jpg",
-            "img/INDEX_27.jpg",
-            "img/INDEX_28.jpg",
-            "img/INDEX_29.jpg",
-            "img/INDEX_30.jpg",
+            "img/INDEX_04.jpeg",
+            "img/INDEX_05.jpeg",
+            "img/INDEX_10.jpeg",
+            "img/INDEX_11.jpeg",
+            "img/INDEX_12.jpeg",
+            "img/INDEX_13.jpeg",
+            "img/INDEX_20.gif",
+            "img/INDEX_21.gif",
+            "img/INDEX_22.gif",
+            "img/INDEX_23.gif",
+            "img/INDEX_30.gif",
+            "img/INDEX_31.gif",
+            "img/INDEX_32.jpeg",
+            "img/INDEX_33.jpg",
+            "img/INDEX_34.jpg",
+            "img/INDEX_40.gif",
+            "img/INDEX_41.gif",
+            "img/INDEX_42.gif",
+            "img/INDEX_50.gif",
+            "img/INDEX_51.jpeg",
+            "img/INDEX_60.gif",
+            "img/INDEX_61.gif",
+            "img/INDEX_62.gif",
+            "img/INDEX_63.gif",
+            "img/INDEX_70.jpg",
+            "img/INDEX_71.gif"
         ];
         const bgImage = document.getElementById('bgImage');
         const randomIdx = Math.floor(Math.random() * images.length);
