--- a/work_de.html
+++ b/work_de.html
@@ -154,11 +154,11 @@
                 <div class="img-hover-text">MUSIKSCHULE "DER HOLLÄNDER"<br/>mit Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_34.jpg" alt="LINYER Bild" class="hover-img" />
+                <img src="INDEX_34.JPG" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">MUSIKSCHULE "DER HOLLÄNDER"<br/>mit Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_35.jpg" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_35.JPG" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">MUSIKSCHULE "DER HOLLÄNDER"<br/>mit Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
             </div>
                 <div class="img-hover-container">
