--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LINYER ARCHITECTURE</title>
+    <title>LINYER Architecture</title>
     <link rel="preload" href="txt.ttf" as="font" type="font/ttf" crossorigin>
     <style>
         @font-face {
@@ -37,7 +37,7 @@
             top: 50%;
             transform: translate(-50%, -50%);
             z-index: 2;
-            color: black;
+            color: white;
             font-size: 10rem;
             font-family: 'TXT', Arial, Helvetica, sans-serif;
             text-decoration: none;
@@ -45,6 +45,7 @@
             background: none;
             padding: 0;
             display: inline-block;
+            mix-blend-mode: difference;
         }
         .overlay:hover {
             color: red;
