--- a/work_de.html
+++ b/work_de.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="utf-8"/>
-    <title>LINYER PROJEKTE de.</title>
+    <title>LINYER Architektur</title>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link rel="stylesheet" href="index.css">
     <style>
@@ -154,7 +154,7 @@
                 <div class="img-hover-text">MUSIKSCHULE "DER HOLLÄNDER"<br/>mit Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="INDEX_34.JPG" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_34.JPG" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">MUSIKSCHULE "DER HOLLÄNDER"<br/>mit Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
