--- a/work_sv.html
+++ b/work_sv.html
@@ -43,7 +43,7 @@
     }
     </style>
     <meta charset="utf-8"/>
-    <title>LINYER PROJEKT sv.</title>
+    <title>LINYER Arkitektur</title>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link rel="stylesheet" href="index.css">
     <script>
@@ -193,11 +193,11 @@
                 <div class="img-hover-text">MUSIKSKOLAN "DER HOLLÄNDER"<br/>med Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_34.jpg" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_34.JPG" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">MUSIKSKOLAN "DER HOLLÄNDER"<br/>med Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_35.jpg" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_34.JPG" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">MUSIKSKOLAN "DER HOLLÄNDER"<br/>med Dalla Santa Birkeland Arkitektur<br/>Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
