--- a/work_sv.html
+++ b/work_sv.html
@@ -228,6 +228,18 @@
                 <img src="img/INDEX_71.gif" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">KERAMIKPAVILJONG<br/>Stockholm, Sverige</div>
             </div>
+                <div class="img-hover-container">
+                <img src="img/INDEX_80.gif" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Sista omgången i tävlingen Europan 18, Gottsunda, Uppsala, Sverige</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_81.gif" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Sista omgången i tävlingen Europan 18, Gottsunda, Uppsala, Sverige</div>
+            </div>
+                <div class="img-hover-container">
+                <img src="img/INDEX_82.gif" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Sista omgången i tävlingen Europan 18, Gottsunda, Uppsala, Sverige</div>
+            </div>
         </div>
     </div>
 </body>
