--- a/work_de.html
+++ b/work_de.html
@@ -189,6 +189,18 @@
                 <img src="img/INDEX_71.gif" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">KERAMIK PAVILLION<br/>Stockholm, Schweden</div>
             </div>
+                <div class="img-hover-container">
+                <img src="img/INDEX_80.gif" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Letzte Runde für den Wettbewerb Europan 18, Gottsunda, Uppsala, Schweden</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_81.gif" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Letzte Runde für den Wettbewerb Europan 18, Gottsunda, Uppsala, Schweden</div>
+            </div>
+                <div class="img-hover-container">
+                <img src="img/INDEX_82.gif" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Letzte Runde für den Wettbewerb Europan 18, Gottsunda, Uppsala, Schweden</div>
+            </div>
         </div>
     </div>
 </body>
