--- a/work_de.html
+++ b/work_de.html
@@ -201,6 +201,10 @@
                 <img src="img/INDEX_82.gif" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">GOTTSUNDA GROVE<br/>Letzte Runde für den Wettbewerb Europan 18, Gottsunda, Uppsala, Schweden</div>
             </div>
+                <div class="img-hover-container">
+                <img src="img/INDEX_83.gif" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Letzte Runde für den Wettbewerb Europan 18, Gottsunda, Uppsala, Schweden</div>
+            </div>
         </div>
     </div>
 </body>
