--- a/work_sv.html
+++ b/work_sv.html
@@ -240,6 +240,10 @@
                 <img src="img/INDEX_82.gif" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">GOTTSUNDA GROVE<br/>Sista omgången i tävlingen Europan 18, Gottsunda, Uppsala, Sverige</div>
             </div>
+                <div class="img-hover-container">
+                <img src="img/INDEX_83.gif" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">GOTTSUNDA GROVE<br/>Sista omgången i tävlingen Europan 18, Gottsunda, Uppsala, Sverige</div>
+            </div>
         </div>
     </div>
 </body>
